@@ -1,6 +1,9 @@
-$Id: ChangeLog,v 1.405 2007/09/11 15:40:45 haraldkipp Exp $
+$Id: ChangeLog,v 1.406 2007/09/11 17:32:30 haraldkipp Exp $
 
 2007-09-11  Harald Kipp  <harald.kipp@egnite.de>
+
+	* dev/ds1307rtc.c: 24/12 hour mismatch fixed (bug #1786271).
+	Thanks to Helmut Holbach.
 
 	* configure.ac, os/version.c: Branch 4.4 created. Head is now 4.5.
 
